[gd_scene load_steps=5 format=2]

[ext_resource path="res://outlineShader.gdshader" type="Shader" id=1]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/outline_color = Color( 0.329412, 0.952941, 0.952941, 1 )
shader_param/opacity = 0.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 49, 15.5 )

[node name="Button" type="Sprite"]
material = SubResource( 14 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 13 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
